docum - desc - add functions and links

--- a/docs/manual.tex
+++ b/docs/manual.tex
@@ -12,7 +12,8 @@
         amsmath,
         xcolor,
         listings,
-        xparse
+        xparse,
+        hyperref
 }
 
 \lstset{basicstyle=\ttfamily,
