--- a/docs/parts/introducion.tex
+++ b/docs/parts/introducion.tex
@@ -3,5 +3,5 @@
 
 \emph{Ghostless Pacman} is a 2021 adaptation of the video game series Pac-man™,
 only without the, as stated, ghosts. It was mainly recreated using the C
-language by Brymer Meneses and Paul Gapud, freshman Computer Science students
+language by Brymer Meneses and Paul Gapud, Computer Science freshmen
 from the University of the Philippines - Baguio.
