--- a/docs/manual.tex
+++ b/docs/manual.tex
@@ -16,15 +16,35 @@
         hyperref
 }
 
-\lstset{basicstyle=\ttfamily,
-  showstringspaces=false,
-  commentstyle=\color{red},
-  keywordstyle=\color{blue}
+\definecolor{codegreen}{rgb}{0,0.6,0}
+\definecolor{codegray}{rgb}{0.5,0.5,0.5}
+\definecolor{codepurple}{rgb}{0.58,0,0.82}
+\definecolor{backcolour}{rgb}{0.95,0.95,0.92}
+
+\lstdefinestyle{mystyle}{
+    backgroundcolor=\color{backcolour},   
+    commentstyle=\color{codegreen},
+    keywordstyle=\color{magenta},
+    numberstyle=\tiny\color{codegray},
+    stringstyle=\color{codepurple},
+    basicstyle=\ttfamily\footnotesize,
+    breakatwhitespace=false,         
+    breaklines=true,                 
+    captionpos=b,                    
+    keepspaces=true,                 
+    numbersep=5pt,                  
+    showspaces=false,                
+    showstringspaces=false,
+    showtabs=false,                  
+    tabsize=2
 }
 
+\lstset{style=mystyle}
+
 \NewDocumentCommand{\codeword}{v}{%
-\texttt{\textcolor{blue}{#1}}%
+    \texttt{\textcolor{black}{#1}}%
 }
+\setlength{\parindent}{0pt} 
 
 \usepackage[normalem]{ulem}
 
@@ -38,7 +58,7 @@
 \author{Aaron Paul Gapud\\
         Brymer Bernard Meneses\\
 		\vspace*{0.5in} \\
-		College of \& Science\\
+		College of Science\\
         \textbf{University of the Philippines - Baguio}\\
         Gov. Pack Road, Baguio City, Baguio 2600
        } \date{\today}
@@ -47,11 +67,14 @@
 \setlength{\topmargin}{0in}     \setlength{\headsep}{-.25in}
 \setlength{\textwidth}{6.5in}   \setlength{\textheight}{8.5in}
 
-\setlength{\parindent}{1cm}
-\renewcommand\thesection{\Roman{section}} 
-\renewcommand\thesubsection{\roman{subsection}} 
+\setlength{\parindent}{0pt}
+
+\renewcommand\thesection{\Alph{section}.} 
+\renewcommand\thesubsection{\Roman{subsection}.} 
 
 \date{}
+
+\renewcommand*\contentsname{Table of Contents}
 
 \begin{document}
 \maketitle 
