revise certain methods and add more documentation

--- a/docs/documentation.tex
+++ b/docs/documentation.tex
@@ -49,7 +49,7 @@
 \usepackage[normalem]{ulem}
 
 \title{
-    \includegraphics[width=3in]{upbag.png} \\
+    \includegraphics[width=3in]{assets/up.png} \\
     \vspace*{1in}
     \textbf{Machine Project 1}
 }
