--- a/docs/parts/compiling.tex
+++ b/docs/parts/compiling.tex
@@ -119,6 +119,8 @@ Hooray! You have now compiled and run the application.
 
 \subsection{Linux}
 
+\subsubsection{Installing the dependencies}
+
 Use your distribution’s package manager to install the following packages:
 
 \begin{itemize}
@@ -129,7 +131,9 @@ Use your distribution’s package manager to install the following packages:
     \item SDL2 Image
 \end{itemize}
 
-Then navigate to the \codeword{ghostless-pacman} folder and run:
+\subsubsection{Compiling the source code}
+Navigate to the \codeword{ghostless-pacman} folder and run the 
+following command.
 
 \begin{lstlisting}[language=bash]
 make run
