--- a/docs/parts/algorithm.tex
+++ b/docs/parts/algorithm.tex
@@ -67,7 +67,9 @@
 \subsection{In-game Algorithm}
 
 \begin{enumerate}
-    \item Display a 10-by-10 board, with Pacman on the top left, the food pieces based on the accepted user input, the randomly distributed blocks, and the randomly placed exit door
+    \item Display a 10-by-10 board, with Pacman on the top left, the food
+        pieces based on the accepted user input, the randomly distributed
+        blocks, and the randomly placed exit door
         \begin{enumerate}[label=\alph*]
             \item If the user presses W, pacman moves up
             \item If the user presses S, pacman moves down
