--- a/docs/parts/error_handling.tex
+++ b/docs/parts/error_handling.tex
@@ -1,19 +1,33 @@
 
 \section{Error handling}
 
-As seen in the algorithms, the game was programmed to handle errors of user input by displaying wrong input reminders per various instances. To recall, below is a list of these occurrences:\\
+As seen in the algorithms, the game was programmed to handle errors of user
+input by displaying wrong input reminders per various instances. To recall,
+below is a list of these occurrences:\\
     \begin{itemize}[label={}]
-        \item In Menu, the program displays a reminder when the user keypress is not '1', '2', '3', or 'A'
+        \item In Menu, the program displays a reminder when the user keypress is not `1', `2', `3', or `A'
         \item In the Game
             \begin{itemize}[label={}]
-                \item In choosing the food number, the program displays a reminder when the user chooses a number outside the range from 2 to 9
-                \item In playing the game, the program displays a reminder when the user presses keys other than 'W', 'S', 'A', or 'D' to move Pacman, and when the user presses keys other than 'M' to return to menu or 'X' to exit the game
-                \item In choosing an option after the game results, displayed through the game prompts, the program displays a reminder when the user presses keys other than 'R' to restart, 'M' to return to menu, or 'X' to exit
+                \item In choosing the food number, the program displays a
+                    reminder when the user chooses a number outside the range
+                    from 2 to 9 \item In playing the game, the program displays
+                    a reminder when the user presses keys other than `W', `S',
+                    `A', or `D' to move Pacman, and when the user presses keys
+                    other than `M' to return to menu or `X' to exit the game
+                \item In choosing an option after the game results, displayed
+                    through the game prompts, the program displays a reminder
+                    when the user presses keys other than `R' to restart, `M'
+                    to return to menu, or `X' to exit
             \end{itemize}
         \item In Tutorial
             \begin{itemize}[label={}]
-                \item In navigating, the program displays a reminder when the user presses keys other than '←' or '→' to navigate through the tutorial slides, when the user presses keys other than 'M' to return to menu
-                \item In the last slide, the program displays a reminder when the user presses keys other than '1' to start the game, 'M' to return to menu, or 'X' to exit
+                \item In navigating, the program displays a reminder when the
+                    user presses keys other than `←' or `→' to navigate through
+                    the tutorial slides, when the user presses keys other than
+                    `M' to return to menu \item In the last slide, the program
+                    displays a reminder when the user presses keys other than
+                    `1' to start the game, `M' to return to menu, or `X' to
+                    exit
             \end{itemize}
-        \item In About the Game, the program displays a reminder when the user presses keys other than 'M' to return to menu
+        \item In About the Game, the program displays a reminder when the user presses keys other than `M' to return to menu
     \end{itemize}
