add definitions, gchk 02

--- a/docs/parts/definitions.tex
+++ b/docs/parts/definitions.tex
@@ -1,11 +1,13 @@
-
+\\
+\\
 Throughout the documentation of the code, the following definitions explain
-some of the terms.
+some of the terms that will be encountered:
 
-
-% TODO:
 \begin{description}
-    \item[state]{bla bla}
-    \item[sprite]{bla lba}
-    \item[asset]{bla lba}
+    \item[state]{is a certain condition of something (e.g., state of the game, state of the player)}
+    \item[sprite]{is a computer graphic which can move and perform actions on screen}
+    \item[asset]{is anything that is incorporated into a video game, such as characters, objects, and sound effects}
+    \item[pointer]{(in programming) is an object that stores and references a memory address in the computer}
+    \item[struct]{is a composite data type declaration that groups variables under one name in memory, accessible via a single pointer} 
+    \item[anti-aliasing]{(in computer graphics) is the removing of jagged edges in an image rendered using pixels}
 \end{description}
