--- a/docs/parts/description.tex
+++ b/docs/parts/description.tex
@@ -24,11 +24,11 @@ to render animation, play sound, and showcase creatives.
     \label{tab:1}
 \end{table}
 
-Pacman, instead of a a plain `O' might definitely look more like Pacman. In
+Pacman, instead of a a plain `O', might definitely look more like Pacman. In
 fact, this Pacman actually munches. Rendering its animation is a feature of the
-said SDL library. The same feature allowed the program to display food pieces
+said SDL library, which also allowed the program to display food pieces
 as something more delicious than asterisks or any other punctuation, that is,
-cherries. The game obstacles that look tougher than `X', and instead of a
+cherries. Game obstacles that look tougher than `X', and instead of a
 dollar sign for the exit door, an exit door.\\
 
 More than these, the resource is also used to render other images such as the
