correct error handling

--- a/docs/parts/error_handling.tex
+++ b/docs/parts/error_handling.tex
@@ -23,8 +23,9 @@ below is a list of these occurrences:\\
             \begin{itemize}[label={}]
                 \item In navigating, the program displays a reminder when the
                     user presses keys other than `←' or `→' to navigate through
-                    the tutorial slides, when the user presses keys other than
-                    `M' to return to menu \item In the last slide, the program
+                    the tutorial slides, or when the user presses keys other than
+                    `M' to return to menu
+                \item In the last slide, the program
                     displays a reminder when the user presses keys other than
                     `1' to start the game, `M' to return to menu, or `X' to
                     exit
