--- a/docs/parts/algorithm.tex
+++ b/docs/parts/algorithm.tex
@@ -1,6 +1,8 @@
 \section{Algorithm}
 \subsection{Pre-game Algorithm}
 
+This algorithm initializes once the application runs, in contrast to the In-game algorithm which runs only when the user chooses Start from the menu, that is, the actual game.
+
 \begin{enumerate}
     \item Application launches
     \item User chooses from the menu options:
@@ -56,6 +58,8 @@
 
 
 \subsection{In-game Algorithm}
+
+As mentioned, this algorithm initializes when the user chooses Start from the menu and actually play the game.
 
 \begin{enumerate}
     \item Display a 10-by-10 board, with Pacman on the top left, the food
